{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 562,
  "lineage": "22d1d993-4502-2926-658d-97095180f34d",
  "resources": [
    {
      "module": "module.ec2-instance-k8s[\"0\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04680790a315cd58d",
            "arn": "arn:aws:ec2:us-east-1:992382545251:instance/i-0130312a127d7dc33",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s_node_profile",
            "id": "i-0130312a127d7dc33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "nachman-home-nitzanim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0669831f25839ca83",
            "private_dns": "ip-172-31-29-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.207",
            "public_dns": "ec2-52-90-173-100.compute-1.amazonaws.com",
            "public_ip": "52.90.173.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b07cb933be169b2b",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http_ssh_nach"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076fcc0127fea803a",
            "tags": {
              "Name": "master_node-0",
              "env": "k8s-terraform-sandbox-nachman",
              "k8s": "tf-nach-master-node"
            },
            "tags_all": {
              "Name": "master_node-0",
              "env": "k8s-terraform-sandbox-nachman",
              "k8s": "tf-nach-master-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8744a6b480d08bd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2-instance-k8s.data.aws_ami.ami",
            "module.instance_profile.aws_iam_instance_profile.k8s_node_profile",
            "module.instance_profile.data.aws_iam_role.k8s_nodes",
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance-k8s[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04680790a315cd58d",
            "arn": "arn:aws:ec2:us-east-1:992382545251:instance/i-0c45f40c3377b5fab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s_node_profile",
            "id": "i-0c45f40c3377b5fab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "nachman-home-nitzanim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016e34058bbf23bd4",
            "private_dns": "ip-172-31-25-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.98",
            "public_dns": "ec2-54-89-232-85.compute-1.amazonaws.com",
            "public_ip": "54.89.232.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f3330eb640679a1",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http_ssh_nach"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076fcc0127fea803a",
            "tags": {
              "Name": "worker_node-0",
              "env": "k8s-terraform-sandbox-nachman",
              "k8s": "tf-nach-working-node"
            },
            "tags_all": {
              "Name": "worker_node-0",
              "env": "k8s-terraform-sandbox-nachman",
              "k8s": "tf-nach-working-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8744a6b480d08bd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2-instance-k8s.data.aws_ami.ami",
            "module.instance_profile.aws_iam_instance_profile.k8s_node_profile",
            "module.instance_profile.data.aws_iam_role.k8s_nodes",
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance-k8s[\"2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04680790a315cd58d",
            "arn": "arn:aws:ec2:us-east-1:992382545251:instance/i-0caad6c6a5ee8a251",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s_node_profile",
            "id": "i-0caad6c6a5ee8a251",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "nachman-home-nitzanim",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8487270cecd3ead",
            "private_dns": "ip-172-31-27-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.154",
            "public_dns": "ec2-13-218-86-49.compute-1.amazonaws.com",
            "public_ip": "13.218.86.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043a2c63e5fbf12a2",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http_ssh_nach"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076fcc0127fea803a",
            "tags": {
              "Name": "worker_node-1",
              "env": "k8s-terraform-sandbox-nachman",
              "k8s": "tf-nach-working-node"
            },
            "tags_all": {
              "Name": "worker_node-1",
              "env": "k8s-terraform-sandbox-nachman",
              "k8s": "tf-nach-working-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8744a6b480d08bd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2-instance-k8s.data.aws_ami.ami",
            "module.instance_profile.aws_iam_instance_profile.k8s_node_profile",
            "module.instance_profile.data.aws_iam_role.k8s_nodes",
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg-k8s",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:vpc/vpc-09549181f6d60927a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-019181990097786cb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c7c69517f17e01b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09549181f6d60927a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-053cbb13c4975605c",
            "owner_id": "992382545251",
            "tags": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.sg-k8s",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group/sg-0b8744a6b480d08bd",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [],
            "id": "sg-0b8744a6b480d08bd",
            "ingress": [],
            "name": "allow_http_ssh_nach",
            "name_prefix": "",
            "owner_id": "992382545251",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-k8s-terraform-sandbox-nachman",
              "env": "k8s-terraform-sandbox-nachman"
            },
            "tags_all": {
              "Name": "sg-k8s-terraform-sandbox-nachman",
              "env": "k8s-terraform-sandbox-nachman"
            },
            "timeouts": null,
            "vpc_id": "vpc-09549181f6d60927a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg-k8s",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group-rule/sgr-085f76b0be35768e9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-085f76b0be35768e9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_rule_id": "sgr-085f76b0be35768e9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg-k8s",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_custom_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group-rule/sgr-01b2e911cd7aaaef3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30000,
            "id": "sgr-01b2e911cd7aaaef3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_rule_id": "sgr-01b2e911cd7aaaef3",
            "tags": null,
            "tags_all": {},
            "to_port": 32000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg-k8s",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group-rule/sgr-0233345508f320ad5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0233345508f320ad5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_rule_id": "sgr-0233345508f320ad5",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg-k8s",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group-rule/sgr-058b22e2c2d691278",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-058b22e2c2d691278",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_rule_id": "sgr-058b22e2c2d691278",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.sg-k8s",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "self_referencing_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tcp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group-rule/sgr-030926ffe1eafb82c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-030926ffe1eafb82c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_rule_id": "sgr-030926ffe1eafb82c",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        },
        {
          "index_key": "udp",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382545251:security-group-rule/sgr-0029ac4e1118aad86",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0029ac4e1118aad86",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_id": "sg-0b8744a6b480d08bd",
            "security_group_rule_id": "sgr-0029ac4e1118aad86",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg-k8s.aws_security_group.allow_http_ssh",
            "module.sg-k8s.data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}